<resources>
    <string name="app_name">WSU Daily Screener</string>
    <string name="button_screener">Screener</string>
    <string name="qr_code">QR Code</string>
    <string name="shared_preference_file_name">wsu_ds_shared_preference</string>
    <string name="access_id">Access Id</string>
    <string name="password">Password</string>
    <string name="contact_no">Contact No.</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="sharedpref_access_id_key">access_id</string>
    <string name="sharedpref_password_key">password</string>
    <string name="sharedpref_phone_key">phone</string>
    <string name="button_open_in_browser">Open In Browser</string>
    <string name="screener_form_url">https://forms.wayne.edu/covid-19-screening#form-12827</string>
    <string name="screener_form_login">https://forms.wayne.edu/covid-19-screening/</string>

</resources>